classDiagram
    %% Inheritance Chain: Plant -> FloweringPlant -> PrizeFlower
    Plant <|-- FloweringPlant : inherits
    FloweringPlant <|-- PrizeFlower : inherits
    
    %% Composition: GardenManager contains Gardens
    GardenManager *-- Garden : contains multiple
    
    %% Composition: Garden contains Plants
    Garden *-- Plant : contains multiple
    
    %% Nested class
    GardenManager *-- GardenStats : nested helper
    
    class GardenManager {
        -list gardens
        +__init__()
        +add_garden(garden)
        +get_garden_scores() dict
        +total_gardens() int
        +create_garden_network()$ classmethod
        +validate_height(height)$ staticmethod
    }
    
    class GardenStats {
        <<nested in GardenManager>>
        -list plants
        -int total_growth
        +__init__(plants, growth)
        +plants_added() int
        +get_total_growth() int
        +count_by_type() dict
    }
    
    class Garden {
        -str owner
        -list plants
        -int total_growth
        +__init__(owner)
        +add_plant(plant)
        +help_all_grow()
        +get_statistics() GardenStats
        +calculate_score() int
        +generate_report()
    }
    
    class Plant {
        -str name
        -int height
        +__init__(name, height)
        +grow(amount) int
        +get_info() str
        +get_type() str
    }
    
    class FloweringPlant {
        -str flower_color
        +__init__(name, height, flower_color)
        +get_info() str
        +get_type() str
    }
    
    class PrizeFlower {
        -int prize_points
        +__init__(name, height, flower_color, prize_points)
        +get_info() str
        +get_type() str
    }
    
    note for GardenManager "Top-level orchestrator\nManages multiple gardens\nProvides analytics"
    note for GardenStats "Helper class for statistics\nNested inside GardenManager"
    note for Plant "Base class\nUse super() in children"
    note for FloweringPlant "Inherits from Plant\nAdds flowering behavior"
    note for PrizeFlower "Inherits from FloweringPlant\nAdds prize tracking"




